# nsScrapper

./: README.md  main.py  pyproject.toml
src/api/: __init__.py  exchange_rates.py  prices.py
src/commons/: enumerates.py
src/commons/classes/: eshops.py  exchange_rates.py  games.py  node.py  prices.py
src/noa/: __init__.py  info.py  listing.py  search.py  util.py
src/noa/api/: __init__.py  algolia.py
src/noa/scraper/: nintendo.py
src/noe/: __init__.py  info.py  listing.py  search.py  util.py
src/noe/api/: nintendo.py
src/nohk/: __init__.py
src/nohk/scraper/: nintendo.py
src/noj/: __init__.py  info.py  listing.py  search.py  util.py
src/noj/api/: __init__.py  nintendo.py
tests/: util.py
tests/test_api/: test_api.py
tests/test_noa/: test_noa_gameinfo.py  test_noa_listing.py  test_noa_search.py
tests/test_noa/test_noa_api/: test_noa_algolia.py
tests/test_noa/test_scraper/: test_noa_nintendo.py
tests/test_noe/: test_noe_gameinfo.py  test_noe_listing.py  test_noe_search.py
tests/test_noe/test_noe_api/: test_noe_nintendo.py
tests/test_noj/: test_noj_gameinfo.py  test_noj_search.py  test_npj_listing.py
tests/test_noj/test_noj_api/: test_noj_nintendo.py
